# goit-group-3-final-project

./: .gitignore  README.md  assistant_bot_cli.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code_quality.yml  tests.yml
bll/configs/: config.py
bll/decorators/: CommandHandlerDecorator.py  command_handler_decorator.py
bll/helpers/: CalendarRenderer.py  DateHelper.py  PromptCompleter.py  SearchHelper.py  TableRenderer.py  calendar_renderer.py  date_helper.py  prompt_completer.py  search_helper.py  table_renderer.py  tag_palette.py
bll/registries/: FileServiceRegistry.py  file_service_registry.py  i_registry.py
bll/validation_policies/: phone_validation_policy.py
dal/entities/: Address.py  Birthday.py  Command.py  Content.py  Email.py  Field.py  Name.py  Note.py  Phone.py  Record.py  Tag.py  Title.py  address.py  birthday.py  command.py  email.py  field.py  name.py  note.py  phone.py  record.py
dal/exceptions/: ExitBotException.py  already_exists_error.py  exit_bot_error.py  invalid_error.py  not_found_error.py
dal/file_managers/: i_file_manager.py
dal/storages/: AddressBookStorage.py  ISerializableStorage.py  NoteStorage.py  address_book_storage.py  i_serializable_storage.py  i_storage.py  note_storage.py
tests/: conftest.py  test_calendar_renderer.py  test_config.py  test_date_helper.py
tests/address_book_management_tests/: test_address_book_storage.py  test_birthday_entity.py  test_end_to_end_address_book.py  test_field_name_phone.py  test_record_builder.py  test_record_entity.py  test_record_search.py  (+1 more)
(+50 files in other folders)
