[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-bot"
version = "1.0.0"
description = "CLI Assistant Bot for contact & note management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GoIT Group 3"}
]
keywords = ["cli", "assistant", "contacts", "notes", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "colorama==0.4.6",
    "prompt-toolkit==3.0.48",
    "Pygments==2.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.0",
    "mypy==1.18.2",
    "ruff==0.14.4",
    "types-colorama==0.4.15.20250801",
]

[project.scripts]
assistant-bot = "assistant_bot_cli:main"

[tool.setuptools]
py-modules = ["main", "assistant_bot_cli"]
packages = ["bll", "dal"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []

